--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "api-node-express",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "1.18.2",
     "express": "4.16.2"
   }
 }
